Fixed CSS overflow issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,20 @@
     align-items: center;
     justify-content: center;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    
+    .router-outlet {
+        overflow: hidden;
+        padding: 40px 70px;
+        overflow-y: auto;
+    
+        @media (max-width: $tablet-breakpoint) {
+            padding: 20px 40px;
+        }
+    }
+}
