--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,9 +1,6 @@
 header {
     background-color: var(--theme-primary-light);
     border-bottom: 2px solid var(--theme-primary);
-    position: sticky;
-    left: 0px;
-    top: 0px;
     height: 40px;
     padding: 25px 20px 25px 50px;
     display: flex;
